core/testing/snapshots/misc/interpolation.snap
### TITLE ###
StringInterpolation_String
### INPUT ###

var = "alice"
print("hello, {var}")
### STDOUT ###
hello, alice

### TITLE ###
StringInterpolation_Int
### INPUT ###

var = 42
print("hello, {var}")
### STDOUT ###
hello, 42

### TITLE ###
StringInterpolation_Float
### INPUT ###

var = 12.5
print("hello, {var}")
### STDOUT ###
hello, 12.5

### TITLE ###
StringInterpolation_Bool
### INPUT ###

var = true
print("hello, {var}")
### STDOUT ###
hello, true

### TITLE ###
StringInterpolation_List
### INPUT ###

var = ["alice", 42]
print("hello, {var}")
### STDOUT ###
hello, [ "alice", 42 ]

### TITLE ###
StringInterpolation_Map
### INPUT ###

var = { "name": "alice", "age": 42 }
print("hello, {var}")
### STDOUT ###
hello, { "name": "alice", "age": 42 }

### TITLE ###
StringInterpolation_ErrorsIfUnknownVariable
### INPUT ###

print("hello, {var}")
### STDERR ###
error[RAD20028]: Undefined variable: var
  --> <script>:2:16
  |
1 |
2 | print("hello, {var}")
  |                ^^^
  |
   = help: variables with similar names exist: map, max, str
   = info: rad explain RAD20028


### EXIT ###
1
### TITLE ###
StringInterpolation_CanEscapeFirst
### INPUT ###

print("hello, \{var}")
### STDOUT ###
hello, {var}

### TITLE ###
StringInterpolation_Expressions
### INPUT ###

print("hello, {2 + 2}")
a = 2
b = 3
print("hello, {a + b}")
name = "alice"
print("hello, {len(name)}")
print("hello, {len('bob')}")
### STDOUT ###
hello, 4
hello, 5
hello, 5
hello, 3

### TITLE ###
StringInterpolation_FormattingString
### INPUT ###

var = "alice"
print("_{var}_")
print("_{var:16}_")
print("_{var:<16}_")
print("_{var:>16}_")
### STDOUT ###
_alice_
_           alice_
_alice           _
_           alice_

### TITLE ###
StringInterpolation_FormattingInt
### INPUT ###

num = 12
print("_{num:.2}_")
print("_{num:16}_")
print("_{num:<16}_")
print("_{num:>16}_")
print("_{num:<16.2}_")
print("_{num:>16.2}_")
print("_{num:.10}_")
### STDOUT ###
_12.00_
_              12_
_12              _
_              12_
_12.00           _
_           12.00_
_12.0000000000_

### TITLE ###
StringInterpolation_FormattingFloat
### INPUT ###

pi = 3.14159
print("_{pi:.2}_")
print("_{pi:16}_")
print("_{pi:<16}_")
print("_{pi:>16}_")
print("_{pi:<16.2}_")
print("_{pi:>16.2}_")
print("_{pi:.10}_")
### STDOUT ###
_3.14_
_        3.141590_
_3.141590        _
_        3.141590_
_3.14            _
_            3.14_
_3.1415900000_

### TITLE ###
StringInterpolation_FormattingFloatExpressions
### INPUT ###

print("_{1 + 2.14159:.2}_")
print("_{1 + 2.14159:16}_")
print("_{1 + 2.14159:<16}_")
print("_{1 + 2.14159:>16}_")
print("_{1 + 2.14159:<16.2}_")
print("_{1 + 2.14159:>16.2}_")
print("_{1 + 2.14159:.10}_")
### STDOUT ###
_3.14_
_        3.141590_
_3.141590        _
_        3.141590_
_3.14            _
_            3.14_
_3.1415900000_

### TITLE ###
StringInterpolation_ModuloOperator
### INPUT ###

a = 10
b = 3
print("10 % 3 = {a % b}")
print("Direct: {10 % 3}")
print("Mixed: {a + b} and {a % b}")
### STDOUT ###
10 % 3 = 1
Direct: 1
Mixed: 13 and 1

### TITLE ###
StringInterpolation_PercentCharactersInStrings
### INPUT ###

value = 42
print("Percentage: {value}%")
print("Multiple %% signs")
print("Format-like: {value} % complete")
print("URL encoded: hello%20world")
print("Mixed: {value}% done, {100 - value}% remaining")
### STDOUT ###
Percentage: 42%
Multiple %% signs
Format-like: 42 % complete
URL encoded: hello%20world
Mixed: 42% done, 58% remaining

### TITLE ###
StringInterpolation_ThousandsSeparator_Int
### INPUT ###

num = 1234567
print("_{num:,}_")
print("_{num:<15,}_")
print("_{num:>15,}_")
print("_{num:15,}_")
### STDOUT ###
_1,234,567_
_1,234,567      _
_      1,234,567_
_      1,234,567_

### TITLE ###
StringInterpolation_ThousandsSeparator_Float
### INPUT ###

pi = 3141.59265
print("_{pi:,}_")
print("_{pi:,.2}_")
print("_{pi:,.4}_")
print("_{pi:<20,.2}_")
print("_{pi:>20,.2}_")
### STDOUT ###
_3,141.59265_
_3,141.59_
_3,141.5927_
_3,141.59            _
_            3,141.59_

### TITLE ###
StringInterpolation_ThousandsSeparator_LargeNumbers
### INPUT ###

million = 1000000
billion = 1000000000
trillion = 1000000000000
print("Million: {million:,}")
print("Billion: {billion:,}")
print("Trillion: {trillion:,}")
### STDOUT ###
Million: 1,000,000
Billion: 1,000,000,000
Trillion: 1,000,000,000,000

### TITLE ###
StringInterpolation_ThousandsSeparator_NegativeNumbers
### INPUT ###

negative_int = -123456
negative_float = -9876.543
print("Negative int: {negative_int:,}")
print("Negative float: {negative_float:,.2}")
print("Padded negative: {negative_int:>15,}")
### STDOUT ###
Negative int: -123,456
Negative float: -9,876.54
Padded negative:        -123,456

### TITLE ###
StringInterpolation_ThousandsSeparator_EdgeCases
### INPUT ###

zero = 0
small = 123
print("Zero: {zero:,}")
print("Small number: {small:,}")
print("Expression: {1000 + 2000:,}")
### STDOUT ###
Zero: 0
Small number: 123
Expression: 3,000

### TITLE ###
StringInterpolation_ThousandsSeparator_IntWithPrecision
### INPUT ###

num = 12345
print("Int with precision: {num:,.2}")
print("Int with larger precision: {num:,.6}")
### STDOUT ###
Int with precision: 12,345.00
Int with larger precision: 12,345.000000

### TITLE ###
StringInterpolation_ThousandsSeparator_TypeSafety
### INPUT ###

name = "John"
print("Testing type safety: {name:,}")
### STDERR ###
error[RAD30003]: Cannot format str with thousands separator ','
  --> <script>:3:29
  |
2 | name = "John"
3 | print("Testing type safety: {name:,}")
  |                             ^^^^^^^^
  |
   = info: rad explain RAD30003


### EXIT ###
1
### TITLE ###
StringInterpolation_ThousandsSeparator_ScientificNotation
### INPUT ###

big_number = 1e6
very_big = 1.23e9
small_number = 1.23e-3
print("1e6: {big_number:,}")
print("1.23e9: {very_big:,}")
print("1.23e-3: {small_number:,}")
### STDOUT ###
1e6: 1,000,000
1.23e9: 1,230,000,000
1.23e-3: 0.00123

### TITLE ###
StringInterpolation_ThousandsSeparator_PreservesPrecision
### INPUT ###

tiny_number = 1.23456e-5
print("With comma: {tiny_number:,}")
print("Without comma: {tiny_number}")
### STDOUT ###
With comma: 0.0000123456
Without comma: 0.0000123456

### TITLE ###
StringInterpolation_ThousandsSeparator_PrecisionConsistency
### INPUT ###

num = 1234.56
print("Without comma: {num}")
print("With comma: {num:,}")
print("Both with precision: {num:.2} vs {num:,.2}")
### STDOUT ###
Without comma: 1234.56
With comma: 1,234.56
Both with precision: 1234.56 vs 1,234.56

### TITLE ###
StringInterpolation_Formatting_ColorDoesNotImpactPadding
### INPUT ###
n = "alice"
print("{n:20}")
print("{blue(n):20}")
print("{n:<20}")
print("{blue(n):<20}")
### ARGS ###
--color=always
### STDOUT ###
               alice
               [34malice[0m
alice               
[34malice[0m               

### TITLE ###
StringInterpolation_Formatting_ColorWorksWithoutPadding
### INPUT ###
n = "alice"
print("{n}")
print("{blue(n)}")
### ARGS ###
--color=always
### STDOUT ###
alice
[34malice[0m

### TITLE ###
StringInterpolation_FillAlignment_ExplicitFill
### INPUT ###
name = "alice"
num = 7
print("_{name:*>10}_")
print("_{name:.<10}_")
print("_{num:0>5}_")
print("_{num:0<5}_")
print("_{name:->10}_")
### STDOUT ###
_*****alice_
_alice....._
_00007_
_70000_
_-----alice_

### TITLE ###
StringInterpolation_FillAlignment_ZeroPadShorthand
### INPUT ###
num = 7
pi = 3.14159
neg = -7
big = 12345
print("_{num:05}_")
print("_{num:<05}_")
print("_{pi:08.2}_")
print("_{neg:06}_")
print("_{big:03}_")
### STDOUT ###
_00007_
_70000_
_00003.14_
_-00007_
_12345_

### TITLE ###
StringInterpolation_FillAlignment_ZeroPadWithThousands
### INPUT ###
num = 7000
print("_{num:010,}_")
### STDOUT ###
_00,007,000_

### TITLE ###
StringInterpolation_FillAlignment_NonSpaceFillWithThousands
### INPUT ###
num = 7000
print("_{num:*>10,}_")
print("_{num:.<10,}_")
### STDOUT ###
_*****7,000_
_7,000....._

### TITLE ###
StringInterpolation_FillAlignment_ZeroPadShorthandOnString
### INPUT ###
name = "alice"
print("_{name:08}_")
print("_{name:<08}_")
### STDOUT ###
_000alice_
_alice000_

### TITLE ###
StringInterpolation_FillAlignment_ExplicitFillOnBool
### INPUT ###
val = true
print("_{val:*>10}_")
print("_{val:.<10}_")
### STDOUT ###
_******true_
_true......_

### TITLE ###
StringInterpolation_FillAlignment_ColorAwarePadding
### INPUT ###
n = "alice"
print("{n:*>20}")
print("{blue(n):*>20}")
print("{n:*<20}")
print("{blue(n):*<20}")
### ARGS ###
--color=always
### STDOUT ###
***************alice
***************[34malice[0m
alice***************
[34malice[0m***************

